--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ clap = "^2.33.0"
 structopt = "0.2.18"
 libc = "0.2"
 num = "0.2"
+flate2 = { version = "^1.0", features = ["zlib"], default-features = false }
