--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ libc = "0.2"
 num = "0.2"
 flate2 = { version = "^1.0", features = ["zlib"], default-features = false }
 atty = "0.2"
+utime = "0.2"
